Fix role prefixing dans JwtAuthenticationFilter et configuration API base URL